--- a/package.json
+++ b/package.json
@@ -17,25 +17,25 @@
     "subscribableevent": "^1.0.1"
   },
   "peerDependencies": {
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0",
-    "react-native": ">=0.57",
-    "react-native-windows": "^0.57.1"
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "0.63.4",
+    "react-native-windows": "0.63.24"
   },
   "devDependencies": {
     "@types/lodash": "4.14.149",
-    "@types/react": "16.9.15",
+    "@types/react": "16.14.6",
     "@types/react-dom": "16.9.4",
-    "@types/react-native": "0.60.23",
-    "@typescript-eslint/eslint-plugin": "2.15.0",
-    "eslint": "6.8.0",
-    "eslint-config-skype": "1.5.0",
-    "eslint-plugin-import": "2.19.1",
-    "eslint-plugin-react": "7.17.0",
-    "react": "^16.3.0",
-    "tslint": "5.20.1",
-    "tsutils": "3.17.1",
-    "typescript": "3.7.4"
+    "@types/react-native": "0.63.4",
+    "@typescript-eslint/eslint-plugin": "4.28.0",
+    "eslint": "7.29.0",
+    "eslint-config-skype": "1.9.2",
+    "eslint-plugin-import": "2.23.4",
+    "eslint-plugin-react": "7.24.0",
+    "react": "16.13.1",
+    "tslint": "6.1.3",
+    "tsutils": "3.21.0",
+    "typescript": "4.3.4"
   },
   "homepage": "https://microsoft.github.io/reactxp/",
   "repository": {
