--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "lint:fix": "npm run lint -- --fix"
   },
   "dependencies": {
-    "lodash": "^4.17.15",
-    "prop-types": "^15.7.2",
-    "rebound": "^0.1.0",
-    "subscribableevent": "^1.0.1"
+    "lodash": "4.17.21",
+    "prop-types": "15.7.2",
+    "rebound": "0.1.0",
+    "subscribableevent": "1.0.1"
   },
   "peerDependencies": {
     "@react-native-async-storage/async-storage": "1.15.5",
@@ -33,7 +33,6 @@
     "eslint-config-skype": "1.9.2",
     "eslint-plugin-import": "2.23.4",
     "eslint-plugin-react": "7.24.0",
-    "react": "16.13.1",
     "tslint": "6.1.3",
     "tsutils": "3.21.0",
     "typescript": "4.3.4"
