--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.15.9",
+    "@react-native-picker/picker": "2.1.0",
     "lodash": "4.17.21",
     "prop-types": "15.7.2",
     "rebound": "0.1.0",
