--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "lint:fix": "npm run lint -- --fix"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.15.9",
-    "@react-native-picker/picker": "2.2.0",
+    "@react-native-async-storage/async-storage": "1.15.13",
+    "@react-native-picker/picker": "2.2.1",
     "lodash": "4.17.21",
     "prop-types": "15.7.2",
     "rebound": "0.1.0",
@@ -21,20 +21,19 @@
   "peerDependencies": {
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-native": "0.66.2",
-    "react-native-windows": "0.66.3"
+    "react-native": "0.66.3"
   },
   "devDependencies": {
-    "@types/lodash": "4.14.176",
-    "@types/react": "17.0.34",
+    "@types/lodash": "4.14.177",
+    "@types/react": "17.0.37",
     "@types/react-dom": "17.0.11",
-    "@types/react-native": "0.66.2",
-    "@typescript-eslint/eslint-plugin": "5.3.0",
-    "eslint": "8.1.0",
-    "eslint-plugin-import": "2.25.2",
+    "@types/react-native": "0.66.6",
+    "@typescript-eslint/eslint-plugin": "5.4.0",
+    "eslint": "8.3.0",
+    "eslint-plugin-import": "2.25.3",
     "tslint": "6.1.3",
     "tsutils": "3.21.0",
-    "typescript": "4.4.4"
+    "typescript": "4.5.2"
   },
   "homepage": "https://microsoft.github.io/reactxp/",
   "repository": {
