--- a/package.json
+++ b/package.json
@@ -11,28 +11,28 @@
     "lint:fix": "npm run lint -- --fix"
   },
   "dependencies": {
-    "@react-native-picker/picker": "2.4.1",
+    "@react-native-picker/picker": "2.4.4",
     "lodash": "4.17.21",
     "prop-types": "15.8.1",
     "rebound": "0.1.0",
     "subscribableevent": "1.0.1"
   },
   "peerDependencies": {
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2"
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-native": "0.69.4"
   },
   "devDependencies": {
-    "@types/lodash": "4.14.182",
-    "@types/react": "17.0.45",
-    "@types/react-dom": "17.0.16",
-    "@types/react-native": "0.67.6",
-    "@typescript-eslint/eslint-plugin": "5.23.0",
-    "eslint": "8.15.0",
+    "@types/lodash": "4.14.183",
+    "@types/react": "18.0.17",
+    "@types/react-dom": "18.0.6",
+    "@types/react-native": "^0.69.3",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "eslint": "^7.32.0",
     "eslint-plugin-import": "2.26.0",
     "tslint": "6.1.3",
     "tsutils": "3.21.0",
-    "typescript": "4.6.4"
+    "typescript": "^4.4.4"
   },
   "homepage": "https://microsoft.github.io/reactxp/",
   "repository": {
