--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
   "peerDependencies": {
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-native": "0.70.3"
+    "react-native": "0.70.5"
   },
   "devDependencies": {
-    "@types/lodash": "4.14.186",
-    "@types/react": "18.0.21",
-    "@types/react-dom": "18.0.6",
-    "@types/react-native": "^0.70.0",
-    "@typescript-eslint/eslint-plugin": "^5.37.1",
+    "@types/lodash": "4.14.188",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "18.0.8",
+    "@types/react-native": "^0.70.6",
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "2.26.0",
     "tslint": "6.1.3",
