--- a/package.json
+++ b/package.json
@@ -11,28 +11,28 @@
     "lint:fix": "npm run lint -- --fix"
   },
   "dependencies": {
-    "@react-native-picker/picker": "2.4.8",
+    "@react-native-picker/picker": "2.4.9",
     "lodash": "4.17.21",
     "prop-types": "15.8.1",
     "rebound": "0.1.0",
     "subscribableevent": "1.0.1"
   },
   "peerDependencies": {
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.70.5"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.4"
   },
   "devDependencies": {
-    "@types/lodash": "4.14.188",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "18.0.8",
-    "@types/react-native": "^0.70.6",
-    "@typescript-eslint/eslint-plugin": "^5.37.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-import": "2.26.0",
+    "@types/lodash": "4.14.192",
+    "@types/react": "^18.0.24",
+    "@types/react-dom": "^18.0.11",
+    "@types/react-native": "^0.71.5",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "eslint": "^8.19.0",
+    "eslint-plugin-import": "2.27.5",
     "tslint": "6.1.3",
     "tsutils": "3.21.0",
-    "typescript": "^4.8.3"
+    "typescript": "4.8.4"
   },
   "homepage": "https://microsoft.github.io/reactxp/",
   "repository": {
